--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
+    "@types/node": "^16.6.2",
     "typescript": "^2.8.1"
+  },
+  "dependencies": {
+    "js-sha256": "^0.9.0"
   }
 }
